Fix carousel spacing

--- a/src/styles/components/public/_features.scss
+++ b/src/styles/components/public/_features.scss
@@ -80,7 +80,7 @@
       img {
         display: block;
         height: 100%;
-        width: 70%;
+        width: (100% / 7);
       }
     }
 
